--- a/app/components/covid-details.hbs
+++ b/app/components/covid-details.hbs
@@ -1,6 +1,6 @@
 <table class="table">
   <thead>
-    <tr><th colspan="3">Gesamt</th></tr>
+    <tr><th class="table-section" colspan="3">Gesamt</th></tr>
   </thead>
   <tbody>
     {{yield}}
@@ -8,7 +8,7 @@
 
   <thead>
     <tr>
-      <th colspan="3">Covid Patienten Stationaer</th>
+      <th class="table-section" colspan="3">Covid Patienten Stationaer</th>
     </tr>
   </thead>
   <tbody>
@@ -24,7 +24,7 @@
     </tr>
   </tbody>
   <thead>
-    <tr><th colspan="3">Betten</th></tr>
+    <tr><th class="table-section" colspan="3">Betten</th></tr>
   </thead>
   <tbody>
     <tr>
